syntax = "proto3";
package common;

enum ClusterType{
    PlatementCenter = 0;
    JournalServer = 1;
    MQTTBrokerServer = 2;
    AMQPBrokerServer = 3;
}

message CommonReply{}